--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,34 +8,43 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Document</title>
 </head>
+
 <body>
-    <header class="cabecalho">
+    <header>
         <img src="img/icon.png" alt="logo">
         <nav class="menu">
-                <button class="btn-carrinho"><i class='bx bx-cart-alt'></i></button>
-            <button class="btn-entrar">Entrar</button>
+            <div class="cart-icon">
+                <p class="qtd">0</p>
+                <button class="cart-btn"><i class='bx bx-cart-alt'></i></button>
+            </div>
+            <button class="enter">Entrar</button>
             <button>Fale conosco!</button>
         </nav>
     </header>
-    <main class="container">
-        <section class="apresentacao">
-            <h2>Connect</h2>
-            <p>Seja bem-vindo à nossa loja online, onde a tecnologia e o entretenimento se encontram! Aqui</p>
-        </section>
-        <section>
-            <h3>Eletronicos</h3>
-            <div class="eletronicos"></div>
-        </section>
-        <section>
-            <h3>Jogos</h3>
-            <div class="jogos"></div>
-        </section>
 
-    </main>
-    <footer class="rodape">
+    <div class="modals">
+        <aside class="cart">
+            
+        </aside>
+        <main class="container">
+            <section class="presentation">
+                <h2>Connect</h2>
+                <p>Seja bem-vindo à nossa loja online, onde a tecnologia e o entretenimento se encontram! Aqui</p>
+            </section>
+            <section>
+                <h3>Eletronicos</h3>
+                <div class="eletronics"></div>
+            </section>
+            <section>
+                <h3>Jogos</h3>
+                <div class="games"></div>
+            </section>
 
-    </footer>
+        </main>
 
+    </div>
     <script src="js/index.js"></script>
+
 </body>
+
 </html>
