--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </section>
         </main>
 
-    <script async src="js/index.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
 
