--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                      <h1>Stride Store</h1>
                      
                      <p>Descubra os melhores tênis para todos os estilos e ocasiões. Aqui você encontra conforto, qualidade e design em um só lugar. Explore nossa coleção e dê o próximo passo com estilo!</p>
-                     <button>Catalogo</button>
+                     <button><a href="#shoes">Catalogo</a></button>
         </main>
         <div class="banners">
             <div class="slider">
