--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     shopping_bag
                     </span></button>
             </div>
-            <button class="enter">Entrar</button>
-            <button>Fale conosco!</button>
+            <a href="#">Entrar</a>
+            <a href="#">Fale conosco!</a>
         </nav>
     </header>
 
@@ -37,7 +37,7 @@
                      <h1>Stride Store</h1>
                      
                      <p>Descubra os melhores tênis para todos os estilos e ocasiões. Aqui você encontra conforto, qualidade e design em um só lugar. Explore nossa coleção e dê o próximo passo com estilo!</p>
-                     <button><a href="#shoes">Catalogo</a></button>
+                     <a href="#shoes">Catalogo</a>
         </main>
         <div class="slider">
             <div class="slides">
