--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             </main>
         </div>
         
-    <script src="js/dragscroll.js" defer></script>
-    <script src="js/index.js" defer></script>
+    <script  src="js/dragscroll.js"></script>
+    <script async src="js/index.js"></script>
        
 </body>
 
