atualização no css e no js

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <header>
         <img src="img/stride Strore.svg" alt="logo">
         <div class="cart-icon" onclick="openCart()">
-            <button class="cart-btn" aria-label="carrinho"><span class="material-symbols-outlined">
+            <button class="cart-btn" aria-label="carrinho">
+                <span class="material-symbols-outlined">
                     shopping_bag
+                    <span class="cart-counter">0</span>
                 </span></button>
             </div>
         <nav class="menu">
@@ -52,7 +54,7 @@
             </span></button>
     </div>
 
-    <div class="shoes">
+    <div id="shoes">
 
     </div>
 
